typescript/checker/tests/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclaration1.ts.stderr
error: Unexpected token Some(Word(Foo))
 --> $DIR/tests/conformance/parser/ecmascript5/MemberFunctionDeclarations/parserMemberFunctionDeclaration1.ts:2:19
  |
2 |     public public Foo() { }
  |                   ^^^

